update amamba 3 pages